cambio en productocontrolador

--- a/demo/src/main/resources/templates/productos.html
+++ b/demo/src/main/resources/templates/productos.html
@@ -297,6 +297,7 @@
                                     <td th:text="${producto.nombre}"></td>
                                     <td th:text="${producto.precio_venta_unitario}"></td>
                                     <td th:text="${producto.cantidad_en_stock}"></td>   
+                                    <td th:text="${producto.}"></td>
                                     <td>
                                         <form th:action="@{/deleteProducto}" method="post">
                                             <input type="hidden" name="idproducto"
